@@ -1,3 +1,6 @@
+Sat Mar 27 12:58:06 2004  Peter Naulls  <peter@chocky.org>
+	* source/clib/ar.h: Add Unix 'ar' format support header.
+
 Wed Mar 24 22:22:01 2004  Alex Waugh  <alex@alexwaugh.com>
 
 	* source/pthread/_context.s (pthread_call_every): Check that our
